--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,6 +1,6 @@
 
-name: my-snap-name # you probably want to 'snapcraft register <name>'
-version: '0.1' # just for humans, typically '1.2+git' or '1.3.2'
+name: los-stagecraft # you probably want to 'snapcraft register <name>'
+version: '2017+git' # just for humans, typically '1.2+git' or '1.3.2'
 summary: LOS (Libre Octave Sequencer) - the open source MIDI sequencer.
 description: |
   LOS is a modern, user-friendly MIDI sequencer for linear and pattern-based compositions.
